--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -8,10 +8,10 @@
     >
 
     <TextView
-        android:id="@+id/tvAppName"
+        android:id="@+id/tvAppNames"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Fakultas Ilmu Komputer"
+        android:text="Fakultas"
         android:fontFamily="@font/montbold"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -36,6 +36,7 @@
 
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="328dp"
@@ -131,5 +132,7 @@
             app:layout_constraintTop_toBottomOf="@+id/jabatan" />
 
     </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
