--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -178,6 +178,8 @@
         android:layout_marginTop="4dp"
         android:foregroundGravity="center"
         android:gravity="center"
+        android:clickable="true"
+        android:onClick="onCallClick"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/extraData4TextView"
         app:srcCompat="@drawable/call" />
@@ -190,6 +192,8 @@
         android:layout_marginEnd="24dp"
         android:foregroundGravity="center"
         android:gravity="center"
+        android:clickable="true"
+        android:onClick="onEmailClick"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/extraData4TextView"
         app:srcCompat="@drawable/email" />
